--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
 * {
-    box-sizing: border-box; /*indica que o tamanho agora levará em conta até a borda*/ 
-    outline: none; /*define sem contorno*/
-    transition: .1s; /*altera os valores das propriedades suavemente*/
+    box-sizing: border-box;
+    /*indica que o tamanho agora levará em conta até a borda*/
+    outline: none;
+    /*define sem contorno*/
+    transition: .1s;
+    /*altera os valores das propriedades suavemente*/
 }
+
 html, body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -21,4 +25,8 @@ a {
 a:hover {
     color: orangered;
     text-decoration: underline;
+}
+
+body {
+    background-image: url("../");
 }
