--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,9 @@
     outline: none;
     transition: .1s;
 }
+
 html, body {
-    color: white;
+    color: rgb(17, 16, 16);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
@@ -39,17 +40,21 @@ header {
     display: flex;
     flex-wrap: wrap;
 }
+
 header nav {
-background-color: rgb(3, 74, 42);
+    background-color: rgb(3, 74, 42);
 }
-header img{
+
+header img {
     height: 4.5rem;
     margin: .3rem .6rem .3rem .3rem;
     width: 4.5rem;
 }
+
 header h1 {
     font-size: 1.8rem;
 }
+
 header nav {
     align-items: center;
     background-color: rgb(3, 74, 42);
@@ -59,4 +64,26 @@ header nav {
     padding: 1px;
     text-transform: uppercase;
     width: 100%;
+}
+
+main {
+    background-color: rgb(248, 248, 248);
+    display: flex;
+}
+
+main>aside {
+    background-color: rgb(204, 255, 218);
+    max-width: 200px;
+    min-width: 200px;
+    padding: 0 1rem;
+    width: 100%;
+}
+
+footer {
+    background-color: rgb(0, 64, 16);
+    align-items: center;
+    display: flex;
+    color: white;
+    padding: 1px;
+    justify-content: center;
 }
